--- a/facebook.html
+++ b/facebook.html
@@ -7,15 +7,16 @@
     <title>facebook</title>
 </head>
 <body>
+   <form action="https://www.facebook.com/campaign/landing.php?campaign_id=14884913640&extra_1=s%7Cc%7C589460569891%7Cb%7Cfacebook%20signin%7C&placement=&creative=589460569891&keyword=facebook%20signin&partner_id=googlesem&extra_2=campaignid%3D14884913640%26adgroupid%3D128696221832%26matchtype%3Db%26network%3Dg%26source%3Dnotmobile%26search_or_content%3Ds%26device%3Dc%26devicemodel%3D%26adposition%3D%26target%3D%26targetid%3Dkwd-3821998899%26loc_physical_ms%3D1007809%26loc_interest_ms%3D%26feeditemid%3D%26param1%3D%26param2%3D&gclid=Cj0KCQiApKagBhC1ARIsAFc7Mc7cE8sI6t__fUiDrlEmFsVuBuvMK1T6H5tWu5TrwGKWPGpPVdlnYt0aAj0jEALw_wcB">
     <h1>facebook</h1>
     <h3>Create a new account</h3>
     <p>It's quick and easy.</p>
     <br>
-    <input type="text" placeholder="FirstName"> <input type="text" placeholder="Surename">
+    <input type="text" name="FirstName" placeholder="FirstName"> <input type="text" placeholder="Surename">
     <br>
-    <input type="text" placeholder="Mobile number or email address">
+    <input type="text" name="Mobile number or email address" placeholder="Mobile number or email address">
     <br>
-    <input type="password" placeholder="New password">
+    <input type="password" name="New password" placeholder="New password">
     <br>
     <input type="date"> 
     <p>Gender</p>
@@ -24,6 +25,7 @@
     <p>By clicking Sign Up, you agree to our Terms, Privacy Policy and Cookies Policy. You may receive SMS notifications from us and can opt out at any time.</p>
     <input type="submit" value="Sign Up">
     <br>
-    <a href="Already have an account?">Already have an account?</a>
+    <a href="https://www.facebook.com/">Already have an account?</a>
+   </form>
 </body>
 </html>
