--- a/facebook.html
+++ b/facebook.html
@@ -12,7 +12,7 @@
     <h3>Create a new account</h3>
     <p>It's quick and easy.</p>
     <br>
-    <input type="text" name="FirstName" placeholder="FirstName"> <input type="text" placeholder="Surename">
+    <input type="text" name="FirstName" placeholder="FirstName"> <input type="text" name="Surename" placeholder="Surename">
     <br>
     <input type="text" name="Mobile number or email address" placeholder="Mobile number or email address">
     <br>
