they css basic folder uploading in github......

--- a/footer.html
+++ b/footer.html
@@ -19,6 +19,9 @@
     <h3>.netdevelopement</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo consequuntur voluptatem recusandae quam, aperiam magni perspiciatis provident expedita, sapiente in, eaque facere a amet impedit ratione possimus! Pariatur assumenda facilis totam, doloremque eos alias in accusamus voluptas libero reiciendis sunt. Totam, iure eligendi reprehenderit qui minima ex? Error minima nam aliquam impedit omnis quasi obcaecati, maiores quibusdam minus totam. Ut facere earum cumque eos iusto reprehenderit explicabo sit quibusdam voluptate maxime sint, esse nesciunt, ullam quisquam accusantium quae dicta beatae?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quaerat natus vel iusto eos. Architecto vel provident animi sit optio minus, nemo perspiciatis veniam quos blanditiis odio, maiores deserunt facilis!</p>
-
+<footer>
+    <p>trademarket &trade;branch</p>
+    <p>copywrite &copy;instagram</p>
+</footer>
 </body>
 </html>
