--- a/FaceBookSigin.html
+++ b/FaceBookSigin.html
@@ -58,7 +58,7 @@
         </select>
         <p class="main_two">Gender?</p>
         <div class="main_third">
-            <input type="radio" name="request"> <label for="">Male</label><input type="radio" name="request"> <label for="">Female</label><input type="radio" name="request"><label for="">Custom</label>
+            <label for="">Female</label><input type="radio" name="request"><label for="">Male</label><input type="radio" name="request"><label for="">Custom</label><input type="radio" name="request">
         </div>
         <p class="main_two">People who use our service may have uploaded your contact information to Facebook.</p>
         <p class="main_two">By clicking Sign Up, you agree to our Terms, Privacy Policy and Cookies Policy. You may receive SMS notifications from us and can opt out at any time.</p>
