remove they css files

--- a/yummybootstrap.html
+++ b/yummybootstrap.html
@@ -5,42 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yummy Bootstarp Template</title>
-  <link rel="stylesheet" href="bootstrap/bootstrap-icons.css">
-  <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
-  <link rel="stylesheet" href="bootstrap/glightbox.min.css">
-  <link rel="stylesheet" href="bootstrap/swiper-bundle.min.css">
+    <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
 </head>
 <header id="header" class="header fixed-top">
-    <nav class="navbar navbar-default navbar-fixed-bottom navbar-expand-lg navbar-dark bg-dark" role = "navigation">
+    <nav class="navbar navbar-default navbar-fixed-bottom navbar-expand-lg navbar-dark bg-dark navbar-inverse" role = "navigation">
         <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-target="#mynavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-target="#mynavbar"></button>
             <div class="collapse navbar-collapse " id="mynavbar">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="nav navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a href="www.google.com" class="nav-link">Home</a>
+                        <a href="./Yummy Bootstrap Template - Index.html" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a href="./Yummy Bootstrap Template - Index.html" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="www.facebook.com"class="nav-link">About</a>
+                        <a href="./Yummy Bootstrap Template - Index.html" class="nav-link">Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a href="www.google.com" class="nav-link">Menu</a>
+                        <a href="./Yummy Bootstrap Template - Index.html" class="nav-link">Event</a>
                     </li>
                     <li class="nav-item">
-                        <a href="www.google.com" class="nav-link">Event</a>
+                        <a href="./Yummy Bootstrap Template - Index.html" class="nav-link nav-brand">chefs</a>
                     </li>
                     <li class="nav-item">
-                        <a href="www.google.com" class="nav-link">chefs</a>
+                        <a href="./Yummy Bootstrap Template - Index.html" class="nav-link">Gallery</a>
                     </li>
                     <li class="nav-item">
-                        <a href="www.google.com" class="nav-link">Gallery</a>
+                        <a href="./Yummy Bootstrap Template - Index.html" class="nav-link">DropDown</a>
                     </li>
                     <li class="nav-item">
-                        <a href="www.google.com" class="nav-link">DropDown</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="www.google.com" class="nav-link">contact</a>
+                        <a href="./Yummy Bootstrap Template - Index.html" class="nav-link">contact</a>
                     </li>
                 </ul>
             </div>
