--- a/yummybootstrap.html
+++ b/yummybootstrap.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
 </head>
 <header id="header" class="header fixed-top">
-    <nav class="navbar navbar-default navbar-fixed-bottom navbar-expand-lg navbar-dark bg-dark navbar-inverse" role = "navigation">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-inverse">
         <div class="container">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-target="#mynavbar"></button>
             <div class="collapse navbar-collapse " id="mynavbar">
