remove the extra for loop condition....1

--- a/index1.html
+++ b/index1.html
@@ -18,6 +18,7 @@
         for (j=0;j<arr.length;j++){
             let va=arr[j];
             element=element+dg[va];
+            console.log(dg[va]);
         }
         console.log(element);
 
