remove the last words

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
                     "name":"kumar",
                     "age":"30"}
     ]
-    console.log(a); 
+    a.forEach(myfunction);
+    function myfunction(item){
+        text+=item(age);
+        if(18>age){
+            console.log(text);
+        }
+    }
     </script>
 </body>
 </html>
