--- a/index1.html
+++ b/index1.html
@@ -18,12 +18,17 @@
         let dg = ['zero','one','two','three','four', 'five','six','seven','eight','nine'];
         for (j=0;j<arr.length;j++){
             let va=arr[j];
-           if(j<arr.length-1)
+         /*  if(j<arr.length-1){
            element=element+dg[va]+e2;
-           else
-           element=element+dg[va];
+           }
+           else{
+            element=element+dg[va];
+           }
+          */
+            element=element+dg[va]+e2;
             console.log(dg[va]);
         }
+        element=element.substring(0,element.length-1);
         console.log(element);
 
     </script>
