power of value inserted

--- a/index1.html
+++ b/index1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-        let num=1345678;
+        let num="";
         console.log(num);
         console.log(num.toString().length);
         let arr=num.toString().split('');
