--- a/yummybootstrap.html
+++ b/yummybootstrap.html
@@ -145,6 +145,11 @@
                 <p>Lorem, deren, trataro, filede, nerada</p>
                 <h3>$9.95</h3>
                 </div>
+                <div class="col-sm-12 gy-5">
+                    <p class="justify-content-between text-center">TESTIMONIALS</p>
+                    <h3 class="justify-content-between text-center">What Are They Saying About Us</h3>
+
+                </div>
             </div>
         </div>
 </div>
