--- a/powervalue.html
+++ b/powervalue.html
@@ -8,16 +8,20 @@
 </head>
 <body>
     <script>
-        let n=document.getElementById("mytext").value;
-        let va=document.getElementById("myvalue").value;
-        document.getElementById("mybutton")=Math.pow(n, va);
+        function fun(){
+            let n=document.getElementById("mytext").value;
+            let va=document.getElementById("myvalue").value;
+            console.log(n);
+            console.log(va);
+        }
+        document.getElementById("mybutton").onclick = fun(); 
     </script>
     <form action="">
         <label for="">value</label><input type="text" id="mytext">
     <br>
         <label for="">Power of value</label><input type="text"id="myvalue">
         <br>
-        <input type="Submit" id="mybutton" onclick="fun">
+        <input type="submit" id="mybutton" onclick="fun">
     </form>
 </body>
 </html>
