--- a/fb.html
+++ b/fb.html
@@ -11,7 +11,7 @@
 
     </script>
   <div class="">
-    <form action="" id="form">
+    <form onsubmit="myFunction()">
         <h1>facebook</h1>
         <h3>Create a new account</h3>
         <p>It's quick and easy.</p>
@@ -27,23 +27,21 @@
         <input type="radio" name="request"> <label for="">Male</label><input type="radio" name="request"> <label for="">Female</label><input type="radio" name="request" ><label for="">Custom</label>
         <p>People who use our service may have uploaded your contact information to Facebook.</p>
         <p>By clicking Sign Up, you agree to our Terms, Privacy Policy and Cookies Policy. You may receive SMS notifications from us and can opt out at any time.</p>
-        <input type="button" value="Sign Up" >
+        <input type="submit" value="Sign Up" >
         <br>
         <a href="https://www.facebook.com/">Already have an account?</a>
         <br>
+    </form>
   </div>
   <p id="d1"></p>
   <script>
-    let form = document.getElementById("form");
-    form.addEventListener('button',function(event)){
-        event.preventDefault(){
+function myFunction(){
         let n=document.getElementById("m").value;
         let n1=document.getElementById("m1").value;
         let n2=document.getElementById("m2").value;
         let n3=document.getElementById("m3").value;
         document.getElementById("d1").innerHTML =n+"/n"+n1+"/n"+n2+"/n"+n3;
         }
-    }
   </script>
 </body>
 </html>
