added event method

--- a/fb.html
+++ b/fb.html
@@ -7,20 +7,17 @@
     <title>Facebooksign</title>
 </head>
 <body>
-    <script>
-
-    </script>
   <div class="">
-    <form onsubmit="myFunction()">
+    <form onsubmit="myFunction()" name="myform" method="get">
         <h1>facebook</h1>
         <h3>Create a new account</h3>
         <p>It's quick and easy.</p>
         <br>
-        <input type="text" name="first_name" placeholder="FirstName" id="m"> <input type="text" name="sure_name" placeholder="Surename" id="m1">
+        <input type="text" name="first_name" placeholder="FirstName" id="m"> <input type="text" name="sure_name" placeholder="Surename">
         <br>
-        <input type="text" name="user_id" placeholder="Mobile number or email address" id="m2">
+        <input type="text" name="user_id" placeholder="Mobile number or email address">
         <br>
-        <input type="password" name="new_password" placeholder="New password" required="they compliesary fill" id="m3">
+        <input type="password" name="new_password" placeholder="New password" required="they compliesary fill">
         <br>
         <input type="date"> 
         <p>Gender</p>
@@ -35,13 +32,10 @@
   </div>
   <p id="d1"></p>
   <script>
-function myFunction(){
-        let n=document.getElementById("m").value;
-        let n1=document.getElementById("m1").value;
-        let n2=document.getElementById("m2").value;
-        let n3=document.getElementById("m3").value;
-        document.getElementById("d1").innerHTML =n+"/n"+n1+"/n"+n2+"/n"+n3;
-        }
+    form.addEventListener('submit',function(event)){
+      let l1=document.getElementById("myform").value;
+      document.getElementById("d1").innerHTML = l1;
+      event.preventDefault()}
   </script>
 </body>
 </html>
