--- a/powervalue.html
+++ b/powervalue.html
@@ -17,9 +17,9 @@
        
     </script>
     <p id="demo"></p>
-        <label for="">value</label><input type="number" id="mytext">
+        <label for="">value</label><input type="number" id="mytext" required>
     <br>
-        <label for="">Power of value</label><input type="number"id="myvalue">
+        <label for="">Power of value</label><input type="number"id="myvalue" required>
         <br>
         <input type="button" value="submit" id="mybutton" onclick="fun()">
 </body>
