added event method

--- a/fb.html
+++ b/fb.html
@@ -32,10 +32,14 @@
   </div>
   <p id="d1"></p>
   <script>
-    form.addEventListener('submit',function(event)){
-      let l1=document.getElementById("myform").value;
-      document.getElementById("d1").innerHTML = l1;
-      event.preventDefault()}
+   function myFunction(form){
+    let in=form.inputbox.value;
+    let formData = new FormData(form);
+    let object = {};
+    formData.forEach(function(value, key){
+    object[key] = value;
+    
+   }
   </script>
 </body>
 </html>
