--- a/fb.html
+++ b/fb.html
@@ -38,7 +38,7 @@
           item= event.target[i];
           console.log("item",item.value);
         } 
-        let text = '{"emo":[' + {item.name[1] : event.value[1]} +
+        let text = '{"emo":[' + {'item.name[1]' : 'event.value[1]'} +
         {'item.name[2]' : 'event.value[2]'} +
         {'item.name[3]' : 'event.value[3]'} +
         {'item.name[4]' : 'event.value[4]'} +']}';
