--- a/fb.html
+++ b/fb.html
@@ -38,12 +38,12 @@
           item= event.target[i];
           console.log("item",item.value);
         } 
-        let text = '{"emo":[' + {'item.name[1]' : 'event.value[1]'} +
-        {'item.name[2]' : 'event.value[2]'} +
-        {'item.name[3]' : 'event.value[3]'} +
-        {'item.name[4]' : 'event.value[4]'} +']}';
+        let text = '{"emo":[' + {'item.name' : 'event.value'} +
+        {'item.name' : 'event.value'} +
+        {'item.name' : 'event.value'} +
+        {'item.name' : 'event.value'} +']}';
           const obj = JSON.parse(text);
-          document.getElementById("d1").innerHTML = obj.emo[i].text;
+          document.getElementById("d1").innerHTML = obj.emo[1].item+""+obj.emo[1].item;
           console.log("item",item.name);
      }
   </script>
