--- a/autofill.html
+++ b/autofill.html
@@ -37,9 +37,9 @@
         for(var i = 0;i <event.target.length; i++){
          var item= event.target[i];
           if(item?.value && item?.name){
-            arr[item.name]=item?.vale
+            arr[item.name]=item?.value;
           }
-      console.log("arr",arr);
+      console.log("arr",arr); 
       }
     }
       var postData= {
