--- a/ajax.html
+++ b/ajax.html
@@ -10,6 +10,7 @@
     <table border="1">
         <thead>
             <tr>
+                <th>id</th>
                 <th>name</th>
                 <th>user_name</th>
                 <th>password_h</th>
@@ -18,6 +19,7 @@
         <tbody id="container">
         </tbody>
     </table>
+    <p id="contai"></p>
     <script>
         fetch('https://jsonplaceholder.typicode.com/users')
         .then(response => response.json())
@@ -26,8 +28,10 @@
                 console.log(json[0].name)
                 console.log(json[0].address.street)
                 var elm="";
+                var elm1="";
                 for(i=0; i<json.length; i++){
-                    elm+="<tr onclick=myFunction(elm)>"+
+                    elm+="<tr onclick=myFunction('"+elm1+json[i].id+"')>"+
+                        "<td>"+json[i].id +"</td>"+
                         "<td>"+json[i].name +"</td>"+
                         "<td>"+"<button>"+json[i].username +"</button>"+"</td>"+
                         "<td>"+json[i].email +"</td>"+
@@ -36,8 +40,19 @@
                 document.getElementById("container").innerHTML=elm;
             })
             function myFunction(name) {
-                this.name=this.name;
                 console.log(name);
+                var con="https://jsonplaceholder.typicode.com/users/"+name;
+                fetch(con)
+                .then(response => response.json())
+                .then(json => {
+                    console.log(json)
+                    var mo="<h4>"+"UserID :"+json.id+"</h4>"+
+                    "<h4>"+"UserName :"+json.name+"</h4>"+
+                    "<h4>"+"UserUSERIDNAME :"+json.username+"</h4>"+
+                    "<h4>"+"UserEMAIL :"+json.email+"</h4>";
+                    document.getElementById("contai").innerHTML=mo;
+                    
+                })
                 }
     </script>
 </body>
