--- a/autofill.html
+++ b/autofill.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="/bootstrap/bootstrap.min.css">
 </head>
 <body>
-  <div class="container row">
+  <div class="container">
     <h1 class="justify-content-between text-center gy-5 text-primary">facebook</h1>
-    <div  class="form-group justify-content-between col-sm-12 gy-5">
+    <div  class="row form-group justify-content-between col-sm-12 gy-5">
         <form onsubmit="myFunction(event)" class="border bg-light w-25">
             <div class="text-lg-start">
                 <h3>Create a new account</h3>
